Define Yin 0.3 language semantics